base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver-deployment
  namespace: ashok
  labels:
    app: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configserver
  template:
    metadata:
      labels:
        app: configserver
    spec:
      containers:
        - name: configserver
          image: caannamalai/configserver:3.2.4
          ports:
            - containerPort: 8888
