base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: configserver-service
  namespace: ashok
  labels:
    app: configserver
spec:
  selector:
    app: configserver
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
